# rm-tooling

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  rm-policy.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ADR/: 0001-perfil-static.md
examples/app/: rm-policy.yaml
examples/platform/: rm-policy.yaml
examples/static/: rm-policy.yaml
rm_validate/: __init__.py  __main__.py  baseline.py  config.py  globs.py  inference.py  profiles.py  reporting.py
rm_validate/analyzers/: __init__.py  base.py  python_ast.py  regex_imports.py  registry.py
rm_validate/checks/: __init__.py  adr_profile.py  base.py  capability_mismatch.py  db.py  file_limits.py  inference_exclusion.py  layering_lock.py  prompt_gate.py  registry.py
rm_validate/checks/fitness/: __init__.py  circular_deps.py  containment.py  forbidden_deps.py  graph.py  layering.py  pure_engines.py  requirements.py
rm_validate/checks/universal/: __init__.py  changelog.py  dependency_audit_hook.py  secrets_scan.py
rm_validate/commands/: __init__.py  check.py  explain.py  init.py
tests/: conftest.py  test_audit_theater.py  test_baseline.py  test_bypass_regression.py  test_explain.py  test_fitness.py  test_graph.py  test_inference_globs.py  test_locks.py  test_multilang.py  test_profiles_config.py  test_selfcheck_init.py  test_selfscan_denylist.py  test_universal.py
