[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rm-validate"
version = "0.1.1"
description = "Generic policy validator for the RM Method — init/check/explain over any repo, driven entirely by rm-policy.yaml."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "rm-tooling contributors" }]
keywords = ["policy", "validator", "fitness-functions", "ci", "architecture"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/edarm92-arch/rm-tooling"
Source = "https://github.com/edarm92-arch/rm-tooling"
Issues = "https://github.com/edarm92-arch/rm-tooling/issues"
Changelog = "https://github.com/edarm92-arch/rm-tooling/blob/main/CHANGELOG.md"

[project.scripts]
rm-validate = "rm_validate.__main__:main"

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8.0", "types-PyYAML>=6.0", "build>=1.2", "twine>=5.0"]

[tool.setuptools.packages.find]
include = ["rm_validate*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
